--- a/react_js/public/index.html
+++ b/react_js/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="App">
   <head>
     <meta charSet="UTF-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title></title>
+    <title>Destiny's Library</title>
   </head>
   <body>
     <div id="root"></div>
