fix for useEffect

--- a/react_js/public/index.html
+++ b/react_js/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="App">
+<html lang="en">
   <head>
     <meta charSet="UTF-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
